fix image overflow on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -121,6 +121,10 @@ body {
 .rel more {
     font-size: 10px;
 }
+.rel_img { 
+    /* Prevent thumbnail from increasing width (useful on mobile). */
+    overflow: hidden;
+}
 #sbox {
     width: 100%;
 }
